# anime-cli

./: Cargo.toml  README.md
src/: anime_dl.rs  anime_find.rs  main.rs  play.rs
