[package]
name = "anime-cli"
version = "0.1.4"
description = "CLI to find, download and stream anime."
authors = ["Daniel Pham <danieltapham@gmail.com>, Vianney Dupoy de Guitard <vianney@n4v1.com>"]
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/exKitsune/anime-cli"
documentation = "https://github.com/exKitsune/anime-cli"
repository = "https://github.com/exKitsune/anime-cli"
keywords = ["anime", "streaming", "cli", "xdcc"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
getopts = "0.2"
pbr = "1.0"
regex = "1"
reqwest = "0.9.19"
serde = "1.0.98"
rand = "0.7.3"
term_size = "1.0.0-beta1"
opener = "0.4"
once_cell = { version = "1.3", features = ["parking_lot"] }
mpv = { version = "0.2", optional = true }

[features]
default = ["mpv"]
