[package]
name = "anime-cli"
version = "0.1.4"
description = "CLI to find, download and stream anime."
authors = ["Daniel Pham <danieltapham@gmail.com>, Vianney Dupoy de Guitard <vianney@n4v1.com>"]
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/exKitsune/anime-cli"
documentation = "https://github.com/exKitsune/anime-cli"
repository = "https://github.com/exKitsune/anime-cli"
keywords = ["anime", "streaming", "cli", "xdcc"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
regex = "1"
rand = "0.7"
terminal_size = "0.1"
once_cell = { version = "1.3", features = ["parking_lot"] }
pbr = { git = "https://github.com/a8m/pb" }
serde = { version = "1.0", features = ["derive"], optional = true }
opener = { version = "0.4", optional = true }
getopts = { version = "0.2", optional = true }
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"], optional = true }
mpv = { version = "0.2", optional = true }

[features]
default = ["find"]
find = ["getopts", "reqwest", "serde"]
with-mpv = ["mpv", "play"]
with-opener = ["opener", "play"]

play = ["find"]